Add history and prediction page

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,7 +10,8 @@
     "vue": "^3.2.13"
   },
   "devDependencies": {
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "vue-router": "^4.0.14"
   },
   "browserslist": [
     "> 1%",
