--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
