--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
+    "@vue/cli-service": "~5.0.0",
     "axios": "^0.27.2",
     "vue": "^3.2.13",
     "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
